Opened 16 years ago
Closed 16 years ago
#3518 closed bug (fixed)
Kernel using almost all RAM for no obvious reason
Reported by: | anevilyak | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I left Haiku running overnight with Vision and mail_daemon active. When I woke up, both of them had crashed in odd places, and the kernel was using nearly all of sys mem. I've attached its area list to this ticket since it looked odd to me, but right now I don't know what else to check. Killing a few userland teams made no difference. The box is still working, so if you want me to dip into KDL to try and look up anything else, please let me know.
Attachments (1)
Change History (5)
by , 16 years ago
Attachment: | kernel_areas.zip added |
---|
comment:1 by , 16 years ago
Also if it's at all helpful, the output of vmstat:
max memory: 1073676288 free memory: 71872512 needed memory: 0 block cache memory: 78643200 max swap space: 2147352576 free swap space: 2057150464 page faults: 4493183
comment:2 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:4 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
List of kernel areas